# hr5-multi-agent-system

./: .dockerignore  .gitignore  Dockerfile  RAILWAY_SETUP.md  README.md  README_AGENTS.md  SYSTEM_SUMMARY.md  analysis_agent.py  analysis_agent_backup.py  analysis_agent_refactored.py  app.py  app_demo.py  chart_agent.py  config.py  conversational_agent.py  cv_agent.py  cv_agent_enhanced.py  cv_mcp_server.py  demo.py  docker-compose.yml  env.example  init.sql  main.py  main_agent_system.py  orchestrator_agent.py  populate_db.py  pyproject.toml  query_agent.py  railway.json  render.yaml  requirements.txt  run_with_db.sh  simple_chart_test.py  start.sh  test_chart_agent.py  test_cv_agent.py  test_orchestrator.py  test_real_data.py
api/: index.py
job_requirements/: job_requirements.xlsx
templates/: index.html
