[project]
name = "hr5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "matplotlib>=3.10.7",
    "mcp-server-postgres>=0.1.0",
    "mcp-use>=1.3.13",
    "pandas>=2.3.3",
    "postgres-mcp>=0.3.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
]
